Add the about section

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,22 +7,23 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <section class="hero">
+    <header class="hero">
         <div class="container hero__container">
-            <header class="header">
-                <a href="#" class="header__link header__link--bold">Fiber</a>
-                <nav class="header__nav">
-                    <a href="#" class="header__link">Community</a>
-                    <a href="#" class="header__link">Pricing</a>
-                    <a href="#" class="header__link">Features</a>
-                </nav>
-                <div class="header__sign">
-                    <a href="#" class="header__link header__link--bold">Sign in</a>
-                    <a href="#" class="btn header__btn">
+            <nav class="menu">
+                <h2 class="menu__heading">Menu</h2>
+                <a href="#" class="menu__link menu__link--bold">Fiber</a>
+                <div class="menu__links">
+                    <a href="#" class="menu__link">Community</a>
+                    <a href="#" class="menu__link">Pricing</a>
+                    <a href="#" class="menu__link">Features</a>
+                </div>
+                <div class="menu__sign">
+                    <a href="#" class="menu__link menu__link--bold">Sign in</a>
+                    <a href="#" class="btn menu__btn">
                         <span class="btn__text">Sign up</span>
                     </a>
                 </div>
-            </header>
+            </nav>
             <div class="hero__content">
                 <div class="hero__text">
                     <div class="hero__rating">
@@ -61,6 +62,75 @@
                 </div>
             </div>
         </div>
+    </header>
+    <section class="about">
+        <div class="container about__container">
+            <hgroup>
+                <h2 class="h2">Why Fiber?</h2>
+                <h3 class="h3 about__heading">A good portfolio means good employability.</h3>
+            </hgroup>
+            <div class="pros">
+                <div class="pros__item">
+                    <img src="../images/time.svg" alt="" class="pros__icon">
+                    <h4 class="pros__title">Build in minutes</h4>
+                    <p class="paragraph paragraph--primary">With a selection of premade templates, you can build out a portfolio in less than 10 minutes.</p>
+                </div>
+                <div class="pros__item">
+                    <img src="../images/code.svg" alt="" class="pros__icon">
+                    <h4 class="pros__title">Add custom CSS</h4>
+                    <p class="paragraph paragraph--primary">Customize your personal portfolio even more with the ability to add your own custom CSS styles.</p>
+                </div>
+                <div class="pros__item">
+                    <img src="../images/allSizes.svg" alt="" class="pros__icon">
+                    <h4 class="pros__title">Responsive</h4>
+                    <p class="paragraph paragraph--primary">All Fiber templates are fully responsive to ensure the experience is seemless across all devices.</p>
+                </div>
+            </div>
+            <section class="diversify">
+                <div class="diversify__text">
+                    <h3 class="h3 h3--secondary diversify__heading">Diversify your portfolio.</h3>
+                    <p class="paragraph paragraph--tertiary">Create an even more impressive portfolio by creating case studies for your projects. Simply follow our step-by-step guide.</p>
+                    <a href="#" class="btn btn--secondary">
+                        <span class="btn__text">Start free trial</span>
+                    </a>
+                </div>
+                <img src="../images/Page Image.png" alt="" class="diversify__img">
+            </section>
+        </div>
     </section>
+    <footer class="footer">
+        <div class="container footer__container">
+            <div class="footer__section footer__section--main">
+                <h5 class="h5">Fiber</h5>
+                <p class="paragraph">With Fiber, you can setup your own personal portfolio in minutes with dozens of premade, beautiful templates.</p>
+                <p class="paragraph">Made with ❤️ in the Netherlands.</p>
+            </div>
+            <nav class="footer__section">
+                <h5 class="h5">Sitemap</h5>
+                <a href="#" class="footer__link">Homepage</a>
+                <a href="#" class="footer__link">Pricing</a>
+                <a href="#" class="footer__link">Testimonials</a>
+                <a href="#" class="footer__link">Features</a>
+            </nav>
+            <nav class="footer__section">
+                <h5 class="h5">Resources</h5>
+                <a href="#" class="footer__link">Support</a>
+                <a href="#" class="footer__link">Contact</a>
+                <a href="#" class="footer__link">FAQ</a>
+            </nav>
+            <nav class="footer__section">
+                <h5 class="h5">Company</h5>
+                <a href="#" class="footer__link">About</a>
+                <a href="#" class="footer__link">Customers</a>
+                <a href="#" class="footer__link">Blog</a>
+            </nav>
+            <nav class="footer__section">
+                <h5 class="h5">Portfolios</h5>
+                <a href="#" class="footer__link">Sarah Andrews</a>
+                <a href="#" class="footer__link">Matthew Higgins</a>
+                <a href="#" class="footer__link">Janice Dave</a>
+            </nav>
+        </div>
+    </footer>
 </body>
 </html>
