--- a/src/html/index.html
+++ b/src/html/index.html
@@ -101,31 +101,31 @@
     <footer class="footer">
         <div class="container footer__container">
             <div class="footer__section footer__section--main">
-                <h5 class="h5">Fiber</h5>
-                <p class="paragraph">With Fiber, you can setup your own personal portfolio in minutes with dozens of premade, beautiful templates.</p>
-                <p class="paragraph">Made with ❤️ in the Netherlands.</p>
+                <h5 class="h5 footer__heading">Fiber</h5>
+                <p class="paragraph paragraph--primary footer__text">With Fiber, you can setup your own personal portfolio in minutes with dozens of premade, beautiful templates.</p>
+                <p class="paragraph paragraph--primary footer__text">Made with ❤ in the Netherlands.</p>
             </div>
             <nav class="footer__section">
-                <h5 class="h5">Sitemap</h5>
+                <h5 class="h5 footer__heading">Sitemap</h5>
                 <a href="#" class="footer__link">Homepage</a>
                 <a href="#" class="footer__link">Pricing</a>
                 <a href="#" class="footer__link">Testimonials</a>
                 <a href="#" class="footer__link">Features</a>
             </nav>
             <nav class="footer__section">
-                <h5 class="h5">Resources</h5>
+                <h5 class="h5 footer__heading">Resources</h5>
                 <a href="#" class="footer__link">Support</a>
                 <a href="#" class="footer__link">Contact</a>
                 <a href="#" class="footer__link">FAQ</a>
             </nav>
             <nav class="footer__section">
-                <h5 class="h5">Company</h5>
+                <h5 class="h5 footer__heading">Company</h5>
                 <a href="#" class="footer__link">About</a>
                 <a href="#" class="footer__link">Customers</a>
                 <a href="#" class="footer__link">Blog</a>
             </nav>
             <nav class="footer__section">
-                <h5 class="h5">Portfolios</h5>
+                <h5 class="h5 footer__heading">Portfolios</h5>
                 <a href="#" class="footer__link">Sarah Andrews</a>
                 <a href="#" class="footer__link">Matthew Higgins</a>
                 <a href="#" class="footer__link">Janice Dave</a>
